--- a/lab_06/pom.xml
+++ b/lab_06/pom.xml
@@ -24,6 +24,11 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.4</version>
+    </dependency>
   </dependencies>
 
   <build>
