--- a/lab_09/lab-09-ejb/pom.xml
+++ b/lab_09/lab-09-ejb/pom.xml
@@ -28,6 +28,12 @@
     <version>4.0.0</version>
     <scope>provided</scope>
   </dependency>
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.12.4</version>
+    <scope>provided</scope>
+  </dependency>
 </dependencies>
 
 <properties>
